welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:17: error: reassignment to val
if (a=b)
     ^loneTeen:17: error: type mismatch;
 found   : Unit
 required: Boolean
if (a=b)
^